--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(convertComtradeM49ToFAO)
 export(convertTLParnterToFAO)
 export(descFCL)
 export(faoAreaName)
+export(getAgriHSCodes)
 export(getTableFromDB)
 import(dplyr)
