Downloading of raw data moved to separate functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,7 @@ export(convertTLParnterToFAO)
 export(descFCL)
 export(faoAreaName)
 export(getAgriHSCodes)
+export(getRawAgriES)
+export(getRawAgriTL)
 export(getTableFromDB)
 import(dplyr)
