Converting of eurostat geonomencl to fao area list moved to separate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(applyadj)
 export(convertComtradeM49ToFAO)
+export(convertGeonom2FAO)
 export(convertTLParnterToFAO)
 export(descFCL)
 export(faoAreaName)
