--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
-Suggests:
-    knitr
+Suggests: knitr
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
+NeedsCompilation: no
+Packaged: 2016-04-20 17:48:46 UTC; garieri
