New functions for the mapping of commodities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,6 @@ export(getRawAgriES)
 export(getRawAgriTL)
 export(getTableFromDB)
 export(is.SWSEnvir)
+export(trailingDigits)
+export(trailingDigits2)
 import(dplyr)
