New function update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getAgriHSCodes)
 export(getRawAgriES)
 export(getRawAgriTL)
 export(getTableFromDB)
+export(hsInRange)
 export(is.SWSEnvir)
 export(trailingDigits)
 export(trailingDigits2)
