--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(applyadj)
 export(convertComtradeM49ToFAO)
 export(convertGeonom2FAO)
 export(convertHS2FCL)
+export(convertMeasuredElementTrade)
 export(convertTLParnterToFAO)
 export(descFCL)
 export(faoAreaName)
