--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
 Package: faoswsTrade
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1
-Date: 2015-08-12
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Title: FAO Trade Module
+Version: 0.1.0
+Date: 2016-04-22
+Author: Marco Garieri
+Maintainer: Marco Garieri <marco.garieri@fao.org>
+Description: Trade module
+License: FAO
 LazyData: TRUE
-Imports: dplyr, faosws, scales, stringr
+Imports: dplyr, faosws, scales, stringr, lazyeval, plyr
 Suggests: testthat, knitr
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
 NeedsCompilation: no
-Packaged: 2016-04-20 17:48:46 UTC; garieri
