Exported fcl2cpc and added it to main.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(convertMeasuredElementTrade)
 export(convertTLParnterToFAO)
 export(descFCL)
 export(faoAreaName)
+export(fcl2cpc2)
 export(getAgriHSCodes)
 export(hsInRange)
 export(is.SWSEnvir)
