Corrected typo in 'partner'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(convertComtradeM49ToFAO)
 export(convertGeonom2FAO)
 export(convertHS2FCL)
 export(convertMeasuredElementTrade)
-export(convertTLParnterToFAO)
+export(convertTLPartnerToFAO)
 export(descFCL)
 export(faoAreaName)
 export(fcl2cpc2)
