--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(adaptTradeDataNames)
 export(addFCLunits)
+export(alignHSLength)
 export(applyadj)
 export(convertComtradeM49ToFAO)
 export(convertGeonom2FAO)
@@ -12,6 +13,7 @@ export(descFCL)
 export(detectOutliers)
 export(doImputation)
 export(faoAreaName)
+export(filterHS6FAOinterest)
 export(getAgriHSCodes)
 export(hsInRange)
 export(hsfclmapSubset)
@@ -22,3 +24,5 @@ export(trailingDigits)
 export(trailingDigits2)
 export(useAdjustments)
 import(dplyr)
+import(futile.logger)
+import(stringr)
