R/glimpse0.R added with docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(doImputation)
 export(faoAreaName)
 export(filterHS6FAOinterest)
 export(getAgriHSCodes)
+export(glimpse0)
 export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
