R/mapHS2FCL.R added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(getAgriHSCodes)
 export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
+export(mapHS2FCL)
 export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
 export(trailingDigits)
