--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(adaptTradeDataNames)
 export(addFCLunits)
-export(alignHSLength)
 export(applyadj)
 export(convertComtradeM49ToFAO)
 export(convertGeonom2FAO)
@@ -19,8 +18,10 @@ export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
 export(mapHS2FCL)
+export(maxHSLength)
 export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
+export(sel1FCL)
 export(trailingDigits)
 export(trailingDigits2)
 export(useAdjustments)
