rprt_writetable.R created. Fix #87

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,8 @@ export(mapHS2FCL)
 export(maxHSLength)
 export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
+export(rprt_hsfclmap)
+export(rprt_writetable)
 export(sel1FCL)
 export(trailingDigits)
 export(trailingDigits2)
