glimpse0 renamed to rprt_glimpse0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ export(doImputation)
 export(faoAreaName)
 export(filterHS6FAOinterest)
 export(getAgriHSCodes)
-export(glimpse0)
 export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
@@ -22,6 +21,7 @@ export(mapHS2FCL)
 export(maxHSLength)
 export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
+export(rprt_glimpse0)
 export(rprt_hsfclmap)
 export(rprt_writetable)
 export(sel1FCL)
