rprt_report.R created

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
 export(rprt_glimpse0)
 export(rprt_hsfclmap)
+export(rprt_report)
 export(rprt_writetable)
 export(sel1FCL)
 export(trailingDigits)
