rprt_[fulltable|hsfclmap]: new function to report full table explicitly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(mapHS2FCL)
 export(maxHSLength)
 export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
+export(rprt_fulltable)
 export(rprt_glimpse0)
 export(rprt_hsfclmap)
 export(rprt_report)
