rprt_uniqhs.R created

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,9 @@ export(preAggregateMultipleTLRows)
 export(rprt_fulltable)
 export(rprt_glimpse0)
 export(rprt_hsfclmap)
+export(rprt_raw_eurostat)
 export(rprt_report)
+export(rprt_uniqhs)
 export(rprt_writetable)
 export(sel1FCL)
 export(trailingDigits)
@@ -32,4 +34,5 @@ export(trailingDigits2)
 export(useAdjustments)
 import(dplyr)
 import(futile.logger)
+import(scales)
 import(stringr)
