--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(preAggregateMultipleTLRows)
 export(rprt_fulltable)
 export(rprt_glimpse0)
 export(rprt_hsfclmap)
+export(rprt_hslength)
 export(rprt_raw_eurostat)
 export(rprt_report)
 export(rprt_uniqhs)
