--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
 export(rprt_fulltable)
 export(rprt_glimpse0)
+export(rprt_hschanged)
 export(rprt_hsfclmap)
 export(rprt_hslength)
 export(rprt_raw_eurostat)
