rprt_map_hschanged.R added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(rprt_glimpse0)
 export(rprt_hschanged)
 export(rprt_hsfclmap)
 export(rprt_hslength)
+export(rprt_map_hschanged)
 export(rprt_raw_eurostat)
 export(rprt_report)
 export(rprt_uniqhs)
