--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(rprt_fulltable)
 export(rprt_glimpse0)
 export(rprt_hschanged)
 export(rprt_hsfclmap)
+export(rprt_hsinrange)
 export(rprt_hslength)
 export(rprt_map_hschanged)
 export(rprt_raw_eurostat)
