--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,9 @@ export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
 export(rprt_fulltable)
 export(rprt_glimpse0)
+export(rprt_hs2fcl_nolinks)
 export(rprt_hschanged)
 export(rprt_hsfclmap)
-export(rprt_hsinrange)
 export(rprt_hslength)
 export(rprt_map_hschanged)
 export(rprt_raw_eurostat)
