Add documentation for setFlag{2,3} and update docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(detectOutliers)
 export(doImputation)
 export(faoAreaName)
 export(filterHS6FAOinterest)
+export(generateFlagVars)
 export(getAgriHSCodes)
 export(hsInRange)
 export(hsfclmapSubset)
@@ -22,6 +23,9 @@ export(maxHSLength)
 export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
 export(sel1FCL)
+export(setFlag2)
+export(setFlag3)
+export(swapFlags)
 export(trailingDigits)
 export(trailingDigits2)
 export(useAdjustments)
