--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(mirrorNonReporters)
 export(preAggregateMultipleTLRows)
 export(rprt_fulltable)
 export(rprt_glimpse0)
+export(rprt_hs2fcl_fulldata)
 export(rprt_hs2fcl_multilinks)
 export(rprt_hs2fcl_nolinks)
 export(rprt_hschanged)
