add_area_names() created. #86. Only FAO area list is supported now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(adaptTradeDataNames)
 export(addFCLunits)
+export(add_area_names)
 export(applyadj)
 export(area_name_fao)
 export(convertComtradeM49ToFAO)
