add_area_names and name_area working versions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(is.SWSEnvir)
 export(mapHS2FCL)
 export(maxHSLength)
 export(mirrorNonReporters)
+export(name_area)
 export(preAggregateMultipleTLRows)
 export(rprt_fulltable)
 export(rprt_glimpse0)
