--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(addFCLunits)
 export(add_area_names)
 export(applyadj)
 export(area_name_fao)
+export(computeMedianUnitValue)
 export(convertComtradeM49ToFAO)
 export(convertGeonom2FAO)
 export(convertHS2FCL)
@@ -13,6 +14,7 @@ export(convertTLPartnerToFAO)
 export(descFCL)
 export(detectOutliers)
 export(doImputation)
+export(extract_hs6fclmap)
 export(faoAreaName)
 export(filterHS6FAOinterest)
 export(generateFlagVars)
@@ -41,6 +43,7 @@ export(rprt_writetable)
 export(sel1FCL)
 export(setFlag2)
 export(setFlag3)
+export(sumFlags)
 export(swapFlags)
 export(trailingDigits)
 export(trailingDigits2)
