Docs for sumFlags etc added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(addFCLunits)
 export(add_area_names)
 export(applyadj)
 export(area_name_fao)
+export(computeMedianUnitValue)
 export(convertComtradeM49ToFAO)
 export(convertGeonom2FAO)
 export(convertHS2FCL)
@@ -41,6 +42,7 @@ export(rprt_writetable)
 export(sel1FCL)
 export(setFlag2)
 export(setFlag3)
+export(sumFlags)
 export(swapFlags)
 export(trailingDigits)
 export(trailingDigits2)
