mapHS6toFCL.R finished and documentation updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
 export(mapHS2FCL)
+export(mapHS6toFCL)
 export(maxHSLength)
 export(mirrorNonReporters)
 export(name_area)
