main.R/reportdirectory.R: move creation of report directory in a separate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(maxHSLength)
 export(mirrorNonReporters)
 export(name_area)
 export(preAggregateMultipleTLRows)
+export(reportdirectory)
 export(rprt_fulltable)
 export(rprt_glimpse0)
 export(rprt_hs2fcl_fulldata)
