Move check of packages versions to separate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(addFCLunits)
 export(add_area_names)
 export(applyadj)
 export(area_name_fao)
+export(check_versions)
 export(computeMedianUnitValue)
 export(convertComtradeM49ToFAO)
 export(convertGeonom2FAO)
