--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ Imports:
     stringr, 
     tidyr
 Suggests: 
+    doParallel,
+    parallel,
     testthat
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
