set_sws_dev_settings.R: local sws settings moved to function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(rprt_writetable)
 export(sel1FCL)
 export(setFlag2)
 export(setFlag3)
+export(set_sws_dev_settings)
 export(sumFlags)
 export(swapFlags)
 export(trailingDigits)
