rprt.R: wrapper for reporting functions created
A couple of reporting functions tested and removed from NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,13 +29,12 @@ export(name_area)
 export(preAggregateMultipleTLRows)
 export(register_cpu_cores)
 export(reportdirectory)
+export(rprt)
 export(rprt_fulltable)
 export(rprt_glimpse0)
-export(rprt_hs2fcl_fulldata)
 export(rprt_hs2fcl_multilinks)
 export(rprt_hs2fcl_nolinks)
 export(rprt_hschanged)
-export(rprt_hsfclmap)
 export(rprt_hslength)
 export(rprt_map_hschanged)
 export(rprt_raw_eurostat)
