--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(sumFlags)
 export(swapFlags)
 export(trailingDigits)
 export(trailingDigits2)
+export(ts_all_reports)
 export(useAdjustments)
 import(dplyr)
 import(futile.logger)
