--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(doImputation)
 export(extract_hs6fclmap)
 export(faoAreaName)
 export(filterHS6FAOinterest)
+export(flowsToMirror)
 export(generateFlagVars)
 export(getAgriHSCodes)
 export(hsInRange)
