--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,8 @@ export(sumFlags)
 export(swapFlags)
 export(trailingDigits)
 export(trailingDigits2)
+export(ts_non_reporters)
+export(ts_reporters)
 export(useAdjustments)
 import(dplyr)
 import(futile.logger)
