--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ export(swapFlags)
 export(trailingDigits)
 export(trailingDigits2)
 export(ts_all_reports)
+export(ts_content_check)
+export(ts_flows_check)
 export(ts_non_reporters)
 export(ts_reporters)
 export(useAdjustments)
