--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(filterHS6FAOinterest)
 export(flowsToMirror)
 export(generateFlagVars)
 export(getAgriHSCodes)
+export(getHsManyLengths)
 export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
@@ -33,6 +34,8 @@ export(mirrorNonReporters)
 export(name_area)
 export(preAggregateMultipleTLRows)
 export(register_cpu_cores)
+export(removeInvalidReporters)
+export(removeNonNumeric)
 export(reportdirectory)
 export(rprt)
 export(rprt_fulltable)
@@ -59,6 +62,7 @@ export(ts_flows_check)
 export(ts_non_reporters)
 export(ts_reporters)
 export(useAdjustments)
+import(data.table)
 import(dplyr)
 import(futile.logger)
 import(scales)
