Add futile.logger to imported packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     plyr, 
     scales, 
     stringr, 
-    tidyr
+    tidyr,
+    futile.logger
 Suggests: 
     doParallel,
     parallel,
