Add description to faoAreaName and rebuilt docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(ts_flows_check)
 export(ts_non_reporters)
 export(ts_reporters)
 export(useAdjustments)
+export(useValidationCorrections)
 import(data.table)
 import(dplyr)
 import(futile.logger)
