--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,11 @@ Suggests:
     doParallel,
     parallel,
     testthat,
-    faoswsModules
+    faoswsModules,
+    igraph,
+    reshape2,
+    zoo,
+    proxy
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
 NeedsCompilation: no
