--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Suggests:
     igraph,
     reshape2,
     zoo,
-    proxy
+    proxy,
+    dygraph,
+    ggplot2
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
 NeedsCompilation: no
