--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(rprt_map_hschanged)
 export(rprt_report)
 export(rprt_uniqhs)
 export(rprt_writetable)
+export(saveFileForPPR)
 export(sel1FCL)
 export(setFlag2)
 export(setFlag3)
