--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(getSaveMostRecentfolders)
 export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
+export(livestockWeightsTable)
 export(mapHS2FCL)
 export(mapHS6toFCL)
 export(maxHSLength)
