Corrections for specific HS (given reporter/year)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(sel1FCL)
 export(setFlag2)
 export(setFlag3)
 export(set_sws_dev_settings)
+export(specificCorrectionsHS)
 export(sumFlags)
 export(swapFlags)
 export(trailingDigits)
