--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: faoswsTrade
 Type: Package
 Title: FAO Trade Module
-Version: 0.1.5
-Date: 2016-07-29
+Version: 0.2.0
+Date: 2018-05-02
 Authors@R: c(person("Marco", "Garieri", role = c("aut"), email = "marco.garieri@fao.org"),
-             person("Bo", "Werth", role = c("aut", "cre"), email = "bo.werth@fao.org"))
+             person("Christian", "Mongeau", role = c("aut", "cre"), email = "christian.mongeau AT fao.org"))
+             person("Bo", "Werth", role = c("aut"), email = "bo.werth@fao.org"))
 Description: Trade module
 License: FAO
 LazyData: TRUE
