--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 export(accuracyScores)
 export(adaptTradeDataNames)
 export(adaptTradeDataTypes)
-export(addFCLunits)
+export(addFinalUnits)
 export(addMirror)
 export(add_area_names)
-export(add_fcls_from_links)
+export(add_cpcs_from_links)
 export(applyadj)
 export(area_name_fao)
 export(check_versions)
@@ -19,7 +19,7 @@ export(convertTLPartnerToFAO)
 export(descFCL)
 export(detectOutliers)
 export(doImputation)
-export(extract_hs6fclmap)
+export(extract_hs6cpcmap)
 export(faoAreaName)
 export(filterHS6FAOinterest)
 export(flowsToMirror)
@@ -32,8 +32,8 @@ export(hsInRange)
 export(hsfclmapSubset)
 export(is.SWSEnvir)
 export(livestockWeightsTable)
-export(mapHS2FCL)
-export(mapHS6toFCL)
+export(mapHS2CPC)
+export(mapHS6toCPC)
 export(maxHSLength)
 export(meltTradeData)
 export(mirrorNonReporters)
@@ -49,8 +49,8 @@ export(reshapeTrade)
 export(rprt)
 export(rprt_fulltable)
 export(rprt_glimpse0)
-export(rprt_hs2fcl_multilinks)
-export(rprt_hs2fcl_nolinks)
+export(rprt_hs2cpc_multilinks)
+export(rprt_hs2cpc_nolinks)
 export(rprt_hschanged)
 export(rprt_hslength)
 export(rprt_map_hschanged)
@@ -58,7 +58,7 @@ export(rprt_report)
 export(rprt_uniqhs)
 export(rprt_writetable)
 export(saveFileForPPR)
-export(sel1FCL)
+export(sel1CPC)
 export(setFlag2)
 export(setFlag3)
 export(set_sws_dev_settings)
